수정 완료 똑똑한 현준 박수 짝짝짝짝짝 2025.09.23

--- a/projectreact/src/components/pages/boardForm/BoardPage.css
+++ b/projectreact/src/components/pages/boardForm/BoardPage.css
@@ -105,14 +105,14 @@
   color: #0b65c2 !important;  /* 테이블 글자색 따라감 */
   font-weight: 700;
 }
-
+/* 
 .basic-button {
   border-radius: 0 !important; 
   padding: 0 16px;
 
 
 
-}
+} */
 .toolbar {
   max-width: 1100px;
   margin: 14px auto;
