--- a/projectreact/src/components/pages/boardForm/ViewPage.css
+++ b/projectreact/src/components/pages/boardForm/ViewPage.css
@@ -34,6 +34,21 @@
   border-spacing: 0;
   overflow: hidden;
   box-shadow: 0 6px 16px rgba(0,0,0,.06);
+  
+}
+
+.button-row {
+  padding: 20px !important;
+  background: #ffffff !important;;
+  text-align: center;
+}
+
+.btn-group-right {
+  display: flex;
+  justify-content: center;
+  gap: 12px;
+  margin-top: 12px;   /* 위쪽과 간격 추가 */
+  
 }
 
 .view-table td:first-child {
@@ -87,6 +102,7 @@
   color: #5aaeeb !important;
 }
 
+
 /* 버튼 행 */
 .button-row {
   padding: 16px !important;   /* 테이블 기본 패딩 덮기 */
@@ -129,6 +145,7 @@
   color: #4b5563 !important;
 }
 .btn-list:hover { background: #f3f4f6 !important; }
+
 
 /* 반응형 */
 @media (max-width: 768px) {
